--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,10 @@
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jerboa.jar"/>
 	<classpathentry kind="lib" path="lib/testng-5.8-jdk15.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/joshua/lib/hadoop-core-0.20.203.0.jar"/>
 	<classpathentry kind="lib" path="/Users/juri/Projects/lib/aws-java-sdk-1.6.0.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/juri/Projects/lib/hadoop-2.4.0/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
